--- a/stocksim/stocksite/templates/home.html
+++ b/stocksim/stocksite/templates/home.html
@@ -3,6 +3,8 @@
 {% block title %}Stock Simulator 2014 - Home{% endblock %}
 
 {% block content %}
-  <h1>Hello, world!</h1>
+  <div class="hero-unit">
+    Graphs go here
+  </div>
   This is the string that was passed: {{ string }}
 {% endblock %}
