--- a/stocksim/stocksite/templates/base.html
+++ b/stocksim/stocksite/templates/base.html
@@ -28,9 +28,9 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="#">Stock Simulator 2014</a>
+          <a class="brand" href="/">Stock Simulator 2014</a>
           <ul class="nav">
-            <li class="active"><a href="#"><i class="icon-home"></i>Home</a></li>
+            <li class="active"><a href="/"><i class="icon-home"></i>Home</a></li>
             <li><a href="/companies">Companies</a></li>
           </ul>
 
@@ -46,6 +46,12 @@
     <div class="container">
       {% block content %}
       {% endblock %}
+
+      <hr>
+
+      <footer>
+        <p>&copy; Stephan, Klaas en Jan</p>
+      </footer>
     </div>
 
     <!-- Scripts -->
