Fixed settings and login templates.

--- a/stocksim/stocksite/templates/base.html
+++ b/stocksim/stocksite/templates/base.html
@@ -35,7 +35,7 @@
           </ul>
 
           <p class="navbar-text pull-right">
-              <a href="#username" class="navbar-link">Username</a>
+              <a href="/settings" class="navbar-link">Username</a>
               | $123,456,789.10 |
               <a href="/login" class="navbar-link">Sign out</a>
           </p>
