Added highstock example

--- a/stocksim/stocksite/templates/base.html
+++ b/stocksim/stocksite/templates/base.html
@@ -35,9 +35,9 @@
           </ul>
 
           <p class="navbar-text pull-right">
-              <a href="/settings" class="navbar-link">Username</a>
-              | $123,456,789.10 |
-              <a href="/login" class="navbar-link">Sign out</a>
+            <a href="/settings" class="navbar-link">{{ user.username }}</a>
+            | $123,456,789.10 |
+            <a href="/login" class="navbar-link">Sign out</a>
           </p>
         </div>
       </div>
