--- a/stocksim/stocksite/templates/base.html
+++ b/stocksim/stocksite/templates/base.html
@@ -37,7 +37,7 @@
           <p class="navbar-text pull-right">
             <a href="/settings" class="navbar-link">{{ user.username }}</a>
             | $123,456,789.10 |
-            <a href="/accounts/login" class="navbar-link">Sign out</a>
+            <a href="/accounts/logout" class="navbar-link">Sign out</a>
           </p>
         </div>
       </div>
