--- a/stocksim/stocksite/templates/home.html
+++ b/stocksim/stocksite/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %}Stock Simulator 2014 - Home{% endblock %}
 
 {% block content %}
-  <div class="hero-unit">
+  <div class="well">
     <div id="graph-container" style="width:100%; height:400px;"></div>
   </div>
 {% endblock %}
