--- a/stocksim/stocksite/templates/base.html
+++ b/stocksim/stocksite/templates/base.html
@@ -62,7 +62,7 @@
             <p class="navbar-text pull-right">
               <a href="/settings" class="navbar-link" style="font-weight:bold;">{{ user.username }}</a>
               &middot;
-              $123,456,789.10
+              ${{ user.get_profile.money }}
               &middot;
               <a href="/accounts/logout" class="navbar-link">Sign out</a>
             </p>
