--- a/stocksim/stocksite/templates/companies.html
+++ b/stocksim/stocksite/templates/companies.html
@@ -7,31 +7,29 @@
   <table class="table table-hover">
   <thead>
     <tr>
-      <td> Company abbr. </td>
-      <td> Company name </td>
-      <td> Stock volume </td>
-      <td> Prev. open price </td>
-      <td> Prev. low price </td>
-      <td> Prev. high price </td>
-      <td> Prev. close price </td>
-      <td> Current price </td>
-      <td> Current bid price </td>
-      <td> Current ask price </td>
+      <th> Symbol </th>
+      <th> Stock volume </th>
+      <th> Prev. open price </th>
+      <th> Prev. close price </th>
+      <th> Current price </th>
+      <th> Current bid price </th>
+      <th> Current ask price </th>
     </tr>
   </thead>
   <tbody>
     {% for company in companies %}
+      {% with company.historicData|last as last %}
     <tr>
-      <td> {{ company.shortName }} </td>
-      <td> {{ company.longName}} </td>
-      <td> {{ yesterday.volume }} </td>
-      <td> {{ yesterday.openPrice }} </td>
-      <td> {{ yesterday.lowPrice }} </td>
-      <td> {{ yesterday.highPrice }} </td>
-      <td> {{ yesterday.closePrice }} </td>
-      <td> {{ today.currentPrice }} </td>
-      <td> {{ today.bidPrice }} </td>
-      <td> {{ today.askPrice }} </td>
+      <td> <abbr title="{{ company.longName }}">{{ company.shortName }}</abbr> </td>
+      <td> {{ last.volume }} </td>
+      <td> {{ last.openPrice }} </td>
+      <td> {{ last.closePrice }} </td>
+      {% endwith %}
+      {% with company.dailyData|last as last %}
+      <td> {{ last.currentPrice }} </td>
+      <td> {{ last.bidPrice }} </td>
+      <td> {{ last.askPrice }} </td>
+      {% endwith %}
     </tr>
     {% endfor %}
   </tbody>
@@ -44,7 +42,15 @@
     {
       $( "tbody>tr" ).click(function()
       {
-        location.href = this.cells[0].innerHTML
+        location.href = $( this.cells[0] ).text()
+      });
+      
+      $( "tbody>tr" ).hover(function() 
+      {
+	      $(this).css('cursor','pointer');
+      }, function() 
+      {
+	      $(this).css('cursor','auto');
       });
     });
   </script>
