--- a/stocksim/stocksite/templates/companies.html
+++ b/stocksim/stocksite/templates/companies.html
@@ -38,7 +38,7 @@
 
 {% block scripts %}  
   <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/dataTables_bootstrap.css"></link>
-  <script type="text/javascript" charset="utf-8" src="{{ STATIC_URL }}DataTables/media/js/jquery.dataTables.js"></script>
+  <script type="text/javascript" charset="utf-8" src="{{ STATIC_URL }}js/jquery.dataTables.js"></script>
   <script src="{{ STATIC_URL }}js/dataTables_bootstrap.js" language="javascript" charset="utf-8" type="text/javascript"></script>
   <script>
     $( document ).ready(function() 
