Fixed the active button issue

--- a/stocksim/stocksite/templates/base.html
+++ b/stocksim/stocksite/templates/base.html
@@ -50,8 +50,8 @@
           <div class="nav-collapse collapse">
             <!-- Navigation links -->
             <ul class="nav">
-              <li class="active"><a href="/"><i class="icon-home"></i> Home</a></li>
-              <li><a href="/companies">Companies</a></li>
+              <li id="home-button"><a href="/"><i class="icon-home"></i> Home</a></li>
+              <li id="companies-button"><a href="/companies">Companies</a></li>
             </ul>
 
             <!-- Search bar -->
