--- a/stocksim/stocksite/templates/company.html
+++ b/stocksim/stocksite/templates/company.html
@@ -99,6 +99,8 @@
               ]
           }]
       });
+      
+      $( "#companies-button" ).addClass("active")
   });
   </script>
 {% endblock %}
