--- a/stocksim/stocksite/templates/home.html
+++ b/stocksim/stocksite/templates/home.html
@@ -30,6 +30,10 @@
               ]
           }]
       });
-  });
+      
+      $( "#home-button" ).addClass("active")
+  });  
   </script>
+  
+
 {% endblock %}
