--- a/stocksim/stocksite/templates/companies.html
+++ b/stocksim/stocksite/templates/companies.html
@@ -43,6 +43,8 @@
   <script>
     $( document ).ready(function() 
     {
+      $( "#companies-button" ).addClass("active")
+
       $( "table" ).dataTable(
       {
         "sDom": "<'row'<'span6'l><'span6'f>r>t<'row'<'span6'i><'span6'p>>",
