--- a/stocksim/stocksite/templates/home.html
+++ b/stocksim/stocksite/templates/home.html
@@ -6,9 +6,44 @@
   <div class="well">
     <div id="graph-container" style="width:100%; height:400px;"></div>
   </div>
+  
+  <table class="table table-hover">
+  <thead>
+    <tr>
+      <th> Symbol </th>
+      <th> Stock owned </th>
+      <th> Prev. open price </th>
+      <th> Prev. close price </th>
+      <th> Current price </th>
+      <th> Current bid price </th>
+      <th> Current ask price </th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for stock in user.get_profile.stocks %}
+      {% with stock.company.historicData|last as last %}
+    <tr>
+      <td> <abbr title="{{ stock.company.longName }}">{{ stock.company.shortName }}</abbr> </td>
+      <td> {{ stock.amount }} </td>
+      <td> {{ last.openPrice }} </td>
+      <td> {{ last.closePrice }} </td>
+      {% endwith %}
+      {% with stock.company.dailyData|last as last %}
+      <td> {{ last.currentPrice }} </td>
+      <td> {{ last.bidPrice }} </td>
+      <td> {{ last.askPrice }} </td>
+      {% endwith %}
+    </tr>
+    {% endfor %}
+  </tbody>
+  </table>
 {% endblock %}
 
 {% block scripts %}
+  <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/dataTables_bootstrap.css"></link>
+  <script type="text/javascript" charset="utf-8" src="{{ STATIC_URL }}js/jquery.dataTables.js"></script>
+  <script src="{{ STATIC_URL }}js/dataTables_bootstrap.js" language="javascript" charset="utf-8" type="text/javascript"></script>
+  
   <script src="http://code.highcharts.com/stock/highstock.js"></script>
   <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
   <script type="text/javascript">
@@ -32,6 +67,11 @@
       });
       
       $( "#home-button" ).addClass("active")
+      
+      $( "table" ).dataTable(
+      {
+        "sDom": "<'row'<'span6'l><'span6'f>r>t<'row'<'span6'i><'span6'p>>",
+      });
   });  
   </script>
   
