--- a/stocksim/stocksite/templates/base.html
+++ b/stocksim/stocksite/templates/base.html
@@ -13,6 +13,14 @@
         padding-bottom: 40px;
       }
 
+      .bordered-div {
+        border: 1px solid;
+        border-radius: 4px;
+        border-color: rgb(221, 221, 221);
+        padding-left: 12px;
+        padding-right: 12px;
+      }
+
       @media screen and (max-width: 979px) {
         body { padding-top: 0px; }
 
@@ -35,6 +43,7 @@
       .btn.btn-navbar {
         margin-top: 2px;
       }
+
     </style>
   </head>
   <body>
