--- a/stocksim/stocksite/templates/home.html
+++ b/stocksim/stocksite/templates/home.html
@@ -44,10 +44,12 @@
     </div>
  
     <div class="span4">
-      <h2> News </h2>
-      {% for newsItem in news %}
-        <a href=#>{{ newsItem.0 }}</a><br><br>
-      {% endfor %}
+      <div class="bordered-div">
+        <h2> News </h2>
+        {% for newsItem in news %}
+          <a href=#>{{ newsItem.0 }}</a><br><br>
+        {% endfor %}
+      </div>
     </div>
   </div>
 {% endblock %}
