--- a/stocksim/stocksite/templates/home.html
+++ b/stocksim/stocksite/templates/home.html
@@ -9,7 +9,7 @@
   
   <div class="row">
     <div class="span8">
-  
+      <h2> Owned stock </h2>
       <table class="table table-hover">
       <thead>
         <tr>
