Fixed table alignment at home

--- a/stocksim/stocksite/templates/home.html
+++ b/stocksim/stocksite/templates/home.html
@@ -83,12 +83,12 @@
       
       $( "table" ).dataTable(
       {
-        "sDom": "<'row'<'span6'l><'span6'f>r>t<'row'<'span6'i><'span6'p>>",
+        "sDom": "<'row'<'span4'l><'span4'f>r>t<'row'<'span4'i><'span4'p>>",
       });
       
       $( "tbody>tr" ).click(function()
       {
-        location.href = "company/" + $( this.cells[0] ).text()
+        location.href = $( this.cells[0] ).text()
       });
       
       $( "tbody>tr" ).hover(function() 
