--- a/stocksim/stocksite/templates/home.html
+++ b/stocksim/stocksite/templates/home.html
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="span8">
       <h2> Owned stock </h2>
-      <table class="table table-hover">
+      <table id="ownedStock" class="table table-hover">
       <thead>
         <tr>
           <th> Symbol </th>
@@ -81,7 +81,7 @@
       
       $( "#home-button" ).addClass("active")
       
-      $( "table" ).dataTable(
+      $( "#ownedStock" ).dataTable(
       {
         "sDom": "<'row'<'span4'l><'span4'f>r>t<'row'<'span4'i><'span4'p>>",
       });
