--- a/stocksim/stocksite/templates/base.html
+++ b/stocksim/stocksite/templates/base.html
@@ -21,6 +21,16 @@
         padding-right: 12px;
       }
 
+      .news-row {
+        margin-bottom: 12px;
+      }
+
+      .news-date {
+        color: rgb(153, 153, 153);
+        font-size: 12px;
+        margin-left: 4px;
+      }
+
       @media screen and (max-width: 979px) {
         body { padding-top: 0px; }
 
