--- a/stocksim/stocksite/templates/home.html
+++ b/stocksim/stocksite/templates/home.html
@@ -47,7 +47,10 @@
       <div class="bordered-div">
         <h2> News </h2>
         {% for newsItem in news %}
-          <a href=#>{{ newsItem.0 }}</a><br><br>
+          <div class="news-row">
+            <span class="news-date pull-right">{{ newsItem.2|date:"d-m-y" }}</span>
+            <a href=#>{{ newsItem.0 }}</a>
+          </div>
         {% endfor %}
       </div>
     </div>
@@ -95,10 +98,10 @@
       
       $( "tbody>tr" ).hover(function() 
       {
-	      $(this).css('cursor','pointer');
+        $(this).css('cursor','pointer');
       }, function() 
       {
-	      $(this).css('cursor','auto');
+        $(this).css('cursor','auto');
       });
   });  
   </script>
