--- a/stocksim/stocksite/templates/login.html
+++ b/stocksim/stocksite/templates/login.html
@@ -39,6 +39,10 @@
         margin-bottom: 15px;
         padding: 7px 9px;
       }
+
+      .form-signin span.add-on {
+        padding: 7px 9px;
+      }
     </style>
   </head>
   <body>
@@ -74,9 +78,16 @@
             -->
 
             {{ form.username.label_tag }}
-            {{ form.username }}
+            <div class="input-prepend">
+              <span class="add-on"><i class="icon-user"></i></span>
+              {{ form.username }}
+            </div>
+
             {{ form.password.label_tag }}
-            {{ form.password }}
+            <div class="input-prepend">
+              <span class="add-on"><i class="icon-lock"></i></span>
+              {{ form.password }}
+            </div>
 
             <button class="btn btn-large btn-primary" type="submit" value="login">Sign in</button>
             <input class="btn btn-large" type="hidden" name="next" value="{{ next }}" />
