Made login fields the default size to align icons properly.

--- a/stocksim/stocksite/templates/login.html
+++ b/stocksim/stocksite/templates/login.html
@@ -32,16 +32,13 @@
       .form-signin .checkbox {
         margin-bottom: 10px;
       }
-      .form-signin input[type="text"],
-      .form-signin input[type="password"] {
-        font-size: 16px;
-        height: auto;
-        margin-bottom: 15px;
-        padding: 7px 9px;
-      }
 
-      .form-signin span.add-on {
-        padding: 7px 9px;
+      .form-signin input[type="password"] {
+        /* font-size: 16px;
+        height: auto;
+        padding: 7px 9px; */
+
+        margin-bottom: 15px;
       }
     </style>
   </head>
