--- a/stocksim/stocksite/templates/base.html
+++ b/stocksim/stocksite/templates/base.html
@@ -21,6 +21,11 @@
         padding-right: 12px;
       }
 
+      a.unstyled-link {
+        color: inherit;
+        text-decoration: inherit;
+      }
+
       .news-row {
         margin-bottom: 12px;
       }
