--- a/stocksim/stocksite/templates/home.html
+++ b/stocksim/stocksite/templates/home.html
@@ -25,8 +25,8 @@
       <tbody>
         {% for stock in user.get_profile.stocks %}
           {% with stock.company.historicData|last as last %}
-        <tr>
-          <td> <abbr title="{{ stock.company.longName }}">{{ stock.company.shortName }}</abbr> </td>
+        <tr style="cursor: pointer;">
+          <td> <a class="unstyled-link" href="/companies/{{ stock.company.shortName }}"><abbr title="{{ stock.company.longName }}">{{ stock.company.shortName }}</abbr></a></td>
           <td> {{ stock.amount }} </td>
           <td> {{ last.openPrice }} </td>
           <td> {{ last.closePrice }} </td>
@@ -93,15 +93,7 @@
       
       $( "tbody>tr" ).click(function()
       {
-        location.href = $( this.cells[0] ).text()
-      });
-      
-      $( "tbody>tr" ).hover(function() 
-      {
-        $(this).css('cursor','pointer');
-      }, function() 
-      {
-        $(this).css('cursor','auto');
+        location.href = $(this).find("a").attr("href");
       });
   });  
   </script>
