Made the search bar work.

--- a/stocksim/stocksite/templates/base.html
+++ b/stocksim/stocksite/templates/base.html
@@ -79,8 +79,8 @@
             </ul>
 
             <!-- Search bar -->
-            <form class="navbar-search pull-left">
-              <input type="text" class="search-query" placeholder="Search companies">
+            <form class="navbar-search pull-left" method="get" action="/companies/">
+              <input type="text" class="search-query" name="search" placeholder="Search companies">
             </form>
             
             <!-- User data -->
