--- a/stocksim/stocksite/templates/companies.html
+++ b/stocksim/stocksite/templates/companies.html
@@ -48,6 +48,9 @@
       $( "#companies" ).dataTable(
       {
         "sDom": "<'row'<'span6'l><'span6'f>r>t<'row'<'span6'i><'span6'p>>",
+        {% if searchText %}
+        "oSearch": {"sSearch": "{{ searchText }}"},
+        {% endif %}
       });
           
       $( "tbody>tr" ).click(function()
