Added proper feed reading from yahoo

--- a/stocksim/stocksite/templates/home.html
+++ b/stocksim/stocksite/templates/home.html
@@ -48,8 +48,8 @@
         <h2> News </h2>
         {% for newsItem in news %}
           <div class="news-row">
-            <span class="news-date pull-right">{{ newsItem.2|date:"d-m-y" }}</span>
-            <a href=#>{{ newsItem.0 }}</a>
+            <span class="news-date pull-right">{{ newsItem.2|date:"d-m H:i" }}</span>
+            <a href={{ newsItem.1 }}>{{ newsItem.0 }}</a>
           </div>
         {% endfor %}
       </div>
