Company pages now mostly uses values from database

--- a/stocksim/stocksite/templates/company.html
+++ b/stocksim/stocksite/templates/company.html
@@ -57,10 +57,11 @@
   
   <div class="row">
     <div class="span4 text-center">
-      <h3>Owned stock: 1337</h3>
+      <h3>Owned stock: {{ amount_stocks }}</h3>
     </div>
     <div class="span4 text-center">
-      <h3>Value: $987,654,321</h3>
+      {% load humanize %}   
+      <h3>Value: ${{ value_stocks|floatformat:2|intcomma }}</h3>
     </div>
     <div class="span4 text-center">
       <h3>Change: +0.05%</h3>
